# test_cudastd_msvc

./: CMakeLists.txt  README.md  test.cpp  test.cu  test.hpp
